# chat-app

./: Cargo.toml  README.md  script.js
src/: main.rs  tests.rs
static/: index.html  script.js  style.css
