[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.10" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }
chrono = "0.4.19"
handlebars = "4.2.1"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates", "tera"]
