[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
rocket_contrib = "0.4.10"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
rocket_http = "0.4.10"

[dev-dependencies]
rand = "0.8"
